--- a/templates/index.html
+++ b/templates/index.html
@@ -18,19 +18,18 @@
 			</h1>
 			<div class="div2">
 				<a class="filtro" href="#">
-					Responsive Design
-				</a>
+					Stylus
 				<a class="publicar" href="#">
 					Publicar
 				</a>
 			</div>
 		</div>
 		<div class="Usuario">
-			<figure>
+			<figure class="content-avatar">
 				<img class="avatar" src="../static/img/avatar.jpg" alt="avatar" />
 			</figure>
 			<a class="flecha" href="#">
-				X
+				
 			</a>
 		</div>
 
@@ -42,13 +41,19 @@
 			<li class="item"><a href="#">HTML.5</a></li>
 			<li class="item"><a href="#">CSS.3</a></li>
 			<li class="item"><a href="#">JavaScript</a></li>
+			<li class="item"><a href="#">Python</a></li>
+			<li class="item"><a href="#">Django</a></li>
+			<li class="item"><a href="#">HTML.5</a></li>
+			<li class="item"><a href="#">CSS.3</a></li>
+			<li class="item"><a href="#">JavaScript</a></li>
 		</ul>
 	</nav>
 	<section class="Seccion">
+		<!--Posts-->
 		<article class="item">
 			<div class="descripcion">
-				<figure class="imagen">
-					<img src="../static/img/foto.jpg" alt="imagen" />
+				<figure class="content-imagen">
+					<img class="imagen" src="../static/img/foto.jpg" alt="imagen" />
 				</figure>
 				<div class="detalles">
 					<h2 class="titulo">
@@ -66,21 +71,196 @@
 					</p>
 				</div>
 			</div>
-			<div class="Acciones">
+			<div class="acciones">
 				<div class="votos">
-					<a href="#">U</a>
-					<span>83</span>
-					<a href="#">D</a>
+					<a class="up" href="#"></a>
+					<span class="total">83</span>
+					<a class="down" href="#"></a>
 				</div>
 				<div class="datos">
 					<a class="comentarios" href="#">15</a>
-					<a class="estrella" href="#">*</a>
+					<a class="estrella" href="#"></a>
+				</div>
+			</div>
+		</article>
+
+		<!--Posts-->
+		<article class="item">
+			<div class="descripcion">
+				<figure class="content-imagen">
+					<img class="imagen" src="../static/img/foto.jpg" alt="imagen" />
+				</figure>
+				<div class="detalles">
+					<h2 class="titulo">
+						Colores, gradientes y texto 3D con Sass y Compass
+					</h2>
+					<p class="autor">
+						<strong>Por: </strong>
+						<a href="#">Moises</a>
+					</p>
+					<a class="tag" href="#">
+						CSS.3
+					</a>
+					<p class="fecha">
+						hace <strong>20</strong> min
+					</p>
+				</div>
+			</div>
+			<div class="acciones">
+				<div class="votos">
+					<a class="up" href="#"></a>
+					<span class="total">83</span>
+					<a class="down" href="#"></a>
+				</div>
+				<div class="datos">
+					<a class="comentarios" href="#">15</a>
+					<a class="estrella" href="#"></a>
+				</div>
+			</div>
+		</article>
+
+		<!--Posts-->
+		<article class="item">
+			<div class="descripcion">
+				<figure class="content-imagen">
+					<img class="imagen" src="../static/img/foto.jpg" alt="imagen" />
+				</figure>
+				<div class="detalles">
+					<h2 class="titulo">
+						Colores, gradientes y texto 3D con Sass y Compass
+					</h2>
+					<p class="autor">
+						<strong>Por: </strong>
+						<a href="#">Moises</a>
+					</p>
+					<a class="tag" href="#">
+						CSS.3
+					</a>
+					<p class="fecha">
+						hace <strong>20</strong> min
+					</p>
+				</div>
+			</div>
+			<div class="acciones">
+				<div class="votos">
+					<a class="up" href="#"></a>
+					<span class="total">83</span>
+					<a class="down" href="#"></a>
+				</div>
+				<div class="datos">
+					<a class="comentarios" href="#">15</a>
+					<a class="estrella" href="#"></a>
+				</div>
+			</div>
+		</article>
+
+		<!--Posts-->
+		<article class="item">
+			<div class="descripcion">
+				<figure class="content-imagen">
+					<img class="imagen" src="../static/img/foto.jpg" alt="imagen" />
+				</figure>
+				<div class="detalles">
+					<h2 class="titulo">
+						Colores, gradientes y texto 3D con Sass y Compass
+					</h2>
+					<p class="autor">
+						<strong>Por: </strong>
+						<a href="#">Moises</a>
+					</p>
+					<a class="tag" href="#">
+						CSS.3
+					</a>
+					<p class="fecha">
+						hace <strong>20</strong> min
+					</p>
+				</div>
+			</div>
+			<div class="acciones">
+				<div class="votos">
+					<a class="up" href="#"></a>
+					<span class="total">83</span>
+					<a class="down" href="#"></a>
+				</div>
+				<div class="datos">
+					<a class="comentarios" href="#">15</a>
+					<a class="estrella" href="#"></a>
+				</div>
+			</div>
+		</article>
+
+		<!--Posts-->
+		<article class="item">
+			<div class="descripcion">
+				<figure class="content-imagen">
+					<img class="imagen" src="../static/img/foto.jpg" alt="imagen" />
+				</figure>
+				<div class="detalles">
+					<h2 class="titulo">
+						Colores, gradientes y texto 3D con Sass y Compass
+					</h2>
+					<p class="autor">
+						<strong>Por: </strong>
+						<a href="#">Moises</a>
+					</p>
+					<a class="tag" href="#">
+						CSS.3
+					</a>
+					<p class="fecha">
+						hace <strong>20</strong> min
+					</p>
+				</div>
+			</div>
+			<div class="acciones">
+				<div class="votos">
+					<a class="up" href="#"></a>
+					<span class="total">83</span>
+					<a class="down" href="#"></a>
+				</div>
+				<div class="datos">
+					<a class="comentarios" href="#">15</a>
+					<a class="estrella" href="#"></a>
+				</div>
+			</div>
+		</article>
+
+		<!--Posts-->
+		<article class="item">
+			<div class="descripcion">
+				<figure class="content-imagen">
+					<img class="imagen" src="../static/img/foto.jpg" alt="imagen" />
+				</figure>
+				<div class="detalles">
+					<h2 class="titulo">
+						Colores, gradientes y texto 3D con Sass y Compass
+					</h2>
+					<p class="autor">
+						<strong>Por: </strong>
+						<a href="#">Moises</a>
+					</p>
+					<a class="tag" href="#">
+						CSS.3
+					</a>
+					<p class="fecha">
+						hace <strong>20</strong> min
+					</p>
+				</div>
+			</div>
+			<div class="acciones">
+				<div class="votos">
+					<a class="up" href="#"></a>
+					<span class="total">83</span>
+					<a class="down" href="#"></a>
+				</div>
+				<div class="datos">
+					<a class="comentarios" href="#">15</a>
+					<a class="estrella" href="#"></a>
 				</div>
 			</div>
 		</article>
 	</section>
 	<footer class="Footer">
-		<div>
+		<div class="content">
 			<strong>Powered by Platzi</strong>
 			<span class="mejor">mejorando.la</span>
 		</div>
